%% DGM-ERD-002 — V2 logical relational model
erDiagram
  DATASET {
    BIGSERIAL dataset_id PK
    TEXT public_id UK
    TEXT ontology_iri
    TEXT title
    TEXT doi
    TEXT source_role
    TEXT license_note
  }
  DATASET_RELEASE {
    BIGSERIAL dataset_release_id PK
    BIGINT dataset_id FK
    TEXT public_id UK
    TEXT ontology_iri
    TEXT release_label
    TEXT source_filename
    TIMESTAMPTZ retrieved_at
  }
  SOURCE_RECORD {
    BIGSERIAL source_record_id PK
    BIGINT dataset_release_id FK
    BIGINT transformation_run_id FK
    CHAR_64_ source_hash
    TEXT ontology_iri
    BIGINT row_number
    JSONB raw_key
  }
  ORGANIZATION {
    BIGSERIAL organization_id PK
    TEXT public_id UK
    TEXT preferred_name
    TEXT ontology_iri
  }
  FACILITY {
    BIGSERIAL facility_id PK
    TEXT public_id UK
    TEXT preferred_name
    BIGINT geography_id FK
    TEXT ontology_iri
  }
  GEOGRAPHY {
    BIGSERIAL geography_id PK
    TEXT public_id UK
    TEXT geography_type
    TEXT canonical_name
    TEXT ontology_iri
    CHAR_2_ country_code
    TEXT source_region_code
    BIGINT geonames_id
  }
  REGULATORY_JURISDICTION {
    BIGSERIAL regulatory_jurisdiction_id PK
    TEXT public_id UK
    BIGINT geography_id FK
    TEXT ontology_iri
    TEXT name
  }
  PHARMACEUTICAL_SUBSTANCE {
    BIGSERIAL substance_id PK
    TEXT public_id UK
    TEXT preferred_name
    TEXT ontology_iri
    TEXT source_code
  }
  MEDICINAL_PRODUCT {
    BIGSERIAL medicinal_product_id PK
    TEXT public_id UK
    TEXT preferred_name
    BIGINT primary_substance_id FK
    TEXT ontology_iri
  }
  PRODUCT_PRESENTATION {
    BIGSERIAL product_presentation_id PK
    TEXT public_id UK
    BIGINT medicinal_product_id FK
    TEXT ontology_iri
    TEXT packaging
    TEXT concentration
    NUMERIC num_in_pack
  }
  IDENTIFIER_ASSIGNMENT {
    BIGSERIAL identifier_assignment_id PK
    TEXT public_id UK
    BIGINT identifier_scheme_id FK
    TEXT entity_type
    BIGINT source_record_id FK
    TEXT ontology_iri
    TEXT entity_public_id
    TEXT lexical_value
  }
  ASSERTION {
    BIGSERIAL assertion_id PK
    TEXT public_id UK
    TEXT predicate_key
    TEXT ontology_iri
    TEXT assertion_type
    TEXT subject_public_id
    TEXT object_lexical
    TEXT object_public_id
  }
  EVIDENCE_SUPPORT {
    BIGSERIAL evidence_support_id PK
    TEXT public_id UK
    BIGINT source_record_id FK
    BIGINT assertion_id FK
    TEXT ontology_iri
  }
  OBSERVATION_RESULT {
    BIGSERIAL observation_result_id PK
    TEXT public_id UK
    TEXT observation_kind
    BIGINT product_presentation_id FK
    BIGINT facility_id FK
    BIGINT geography_id FK
    BIGINT diagnosis_reference_id FK
    DATE reporting_period
  }
  ENTITY_MATCH_ASSERTION {
    BIGSERIAL entity_match_assertion_id PK
    TEXT public_id UK
    BIGINT source_record_a_id FK
    BIGINT source_record_b_id FK
    NUMERIC_5_4_ confidence
    TEXT status
    TEXT ontology_iri
    TEXT matched_entity_type
  }
  MEDICINE_SHORTAGE_SITUATION {
    BIGSERIAL shortage_id PK
    TEXT public_id UK
    BIGINT medicinal_product_id FK
    BIGINT product_presentation_id FK
    BIGINT regulatory_jurisdiction_id FK
    BIGINT source_record_id FK
    TEXT ontology_iri
    DATE starts_on
  }
  DATASET ||--o{ DATASET_RELEASE : "dataset_id"
  DATASET_RELEASE ||--o{ SOURCE_RECORD : "dataset_release_id"
  GEOGRAPHY o|--o{ REGULATORY_JURISDICTION : "geography_id"
  GEOGRAPHY o|--o{ FACILITY : "geography_id"
  PHARMACEUTICAL_SUBSTANCE o|--o{ MEDICINAL_PRODUCT : "primary_substance_id"
  MEDICINAL_PRODUCT ||--o{ PRODUCT_PRESENTATION : "medicinal_product_id"
  SOURCE_RECORD o|--o{ IDENTIFIER_ASSIGNMENT : "source_record_id"
  SOURCE_RECORD ||--o{ EVIDENCE_SUPPORT : "source_record_id"
  ASSERTION ||--o{ EVIDENCE_SUPPORT : "assertion_id"
  PRODUCT_PRESENTATION o|--o{ OBSERVATION_RESULT : "product_presentation_id"
  FACILITY o|--o{ OBSERVATION_RESULT : "facility_id"
  GEOGRAPHY o|--o{ OBSERVATION_RESULT : "geography_id"
  SOURCE_RECORD ||--o{ OBSERVATION_RESULT : "source_record_id"
  ASSERTION ||--o{ OBSERVATION_RESULT : "assertion_id"
  SOURCE_RECORD ||--o{ ENTITY_MATCH_ASSERTION : "source_record_a_id"
  SOURCE_RECORD ||--o{ ENTITY_MATCH_ASSERTION : "source_record_b_id"
  MEDICINAL_PRODUCT o|--o{ MEDICINE_SHORTAGE_SITUATION : "medicinal_product_id"
  PRODUCT_PRESENTATION o|--o{ MEDICINE_SHORTAGE_SITUATION : "product_presentation_id"
  REGULATORY_JURISDICTION o|--o{ MEDICINE_SHORTAGE_SITUATION : "regulatory_jurisdiction_id"
  SOURCE_RECORD o|--o{ MEDICINE_SHORTAGE_SITUATION : "source_record_id"
